@@ -18,8 +18,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.List;;
 
 @Service
 @RequiredArgsConstructor
@@ -118,7 +117,7 @@ public class MembersCommandServiceImpl implements MembersCommandService{
         }
         List<MembersDetailResponseDTO> responseDTOList = membersList.stream()
                 .map(MembersDetailResponseDTO::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return MembersResponse.MembersDetailListResponseDTO.builder()
                 .membersDetailResponseDTOList(responseDTOList)
